force-app/main/default/objects/DocumentDetail__c/DocumentDetail__c.object-meta.xml
<CustomObject>
    <description>TEST OBJECT - created only to test Salesforce performance.</description>
    <label>DocumentDetail</label>
    <nameField>
        <label>DocumentDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocumentDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>