force-app/main/default/objects/DocumentDetail__c/fields/DocDate__c.field-meta.xml
<CustomField>
    <fullName>DocDate__c</fullName>
    <label>DocDate</label>
    <type>Date</type>
</CustomField>