force-app/main/default/objects/DocumentDetail__c/fields/DocDesc__c.field-meta.xml
<CustomField>
    <fullName>DocDesc__c</fullName>
    <label>DocDesc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>