force-app/main/default/objects/DocumentDetail__c/fields/DocSize__c.field-meta.xml
<CustomField>
    <fullName>DocSize__c</fullName>
    <label>DocSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>